# substrate-proof-of-existence

./: Cargo.toml  README.md
example/: README.md
example/proof-of-existence-node/: Cargo.toml  README.md
example/proof-of-existence-node/runtime/: Cargo.toml
example/proof-of-existence-node/runtime/src/: lib.rs
example/proof-of-existence-node/runtime/wasm/: Cargo.toml  build.sh
example/proof-of-existence-node/runtime/wasm/src/: lib.rs
example/proof-of-existence-node/src/: chain_spec.rs  service.rs
example/proof-of-existence-ui/src/: FileDigestBond.jsx  app.jsx
proof-of-existence/: Cargo.toml  README.md  build.sh
proof-of-existence-ui/: package.json
proof-of-existence-ui/src/: DigestTag.jsx  DigestWrapper.jsx  FileDigestBond.jsx  Pretty.jsx  app.jsx
proof-of-existence/runtime/: Cargo.toml
proof-of-existence/runtime/src/: lib.rs  proof_of_existence.rs
proof-of-existence/runtime/wasm/: Cargo.toml  build.sh
proof-of-existence/src/: chain_spec.rs  cli.yml  main.rs  service.rs
src/: lib.rs
