[package]
name = "proof-of-existence"
version = "0.1.0"
authors = ["Shawn Tabrizi <shawntabrizi@gmail.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", optional = true }
parity-codec = { version = "3.3", default-features = false }
srml-support = { git = "https://github.com/paritytech/substrate.git", branch = "v1.0", default-features = false }
system = { package = "srml-system", git = "https://github.com/paritytech/substrate.git", branch = "v1.0", default-features = false }
balances = { package = "srml-balances", git = "https://github.com/paritytech/substrate.git", branch = "v1.0", default-features = false }
timestamp = { package = "srml-timestamp", git = "https://github.com/paritytech/substrate.git", branch = "v1.0", default-features = false }
sr-std = { git = "https://github.com/paritytech/substrate.git", branch = "v1.0", default-features = false }
sr-primitives = { git = "https://github.com/paritytech/substrate.git", branch = "v1.0", default-features = false }

[dev-dependencies]
sr-io = { git = "https://github.com/paritytech/substrate.git", branch = "v1.0" }
substrate-primitives = { git = "https://github.com/paritytech/substrate.git", branch = "v1.0" }
sr-primitives = { git = "https://github.com/paritytech/substrate.git", branch = "v1.0" }

[features]
default = ["std"]
std = [
	"serde",
	"parity-codec/std",
	"sr-primitives/std",
	"srml-support/std",
	"system/std",
	"balances/std",
    "timestamp/std",
    "sr-std/std",
    "sr-primitives/std",
]
