[package]
name = "proof-of-existence"
version = "0.1.0"
authors = ["Shawn Tabrizi <shawntabrizi@gmail.com>"]
edition = "2018"

[features]
default = ['std']
std = [
    'parity-codec/std',
    'support/std',
    'system/std',
    'timestamp/std',
    'runtime-primitives/std',
    'rstd/std',
]

[dependencies.parity-codec]
default-features = false
features = ['derive']
version = '3.5'

[dependencies.support]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-support'
branch = 'v1.0'

[dependencies.system]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-system'
branch = 'v1.0'

[dependencies.timestamp]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-timestamp'
branch = 'v1.0'

[dependencies.runtime-primitives]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sr-primitives'
branch = 'v1.0'

[dependencies.rstd]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sr-std'
branch = 'v1.0'

[dev-dependencies.primitives]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-primitives'
branch = 'v1.0'

[dev-dependencies.runtime-io]
git = 'https://github.com/paritytech/substrate.git'
package = 'sr-io'
branch = 'v1.0'

[dev-dependencies.balances]
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-balances'
branch = 'v1.0'
