[lib]
crate-type = ['cdylib']

[workspace]
members = []
[profile.release]
lto = true
panic = 'abort'

[features]
default = []
std = ['proof-of-existence-runtime/std']
[dependencies.proof-of-existence-runtime]
default-features = false
path = '..'

[package]
authors = ['Parity Technologies <admin@parity.io>']
edition = '2018'
name = 'proof-of-existence-runtime-wasm'
version = '1.0.0'
